[metadata]
name = rgbmaker
version = 0.0.1.1
author = Avinash Kumar
author_email = avialxee@gmail.com
description = A python package which has radio astronomy calculation tools including spectral index map calculation.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/avialxee/radiomap
project_urls =
    Bug Tracker = https://github.com/avialxee/radiomap/issues
[options]
package_dir =
    = src
packages = find:

[options.packages.find]
where = src